Remove deprecated warnings